fix popup z-index

--- a/src/less/popup.less
+++ b/src/less/popup.less
@@ -17,6 +17,8 @@
   overflow-x: hidden;
   overflow-y: auto;
 
+  z-index: 1000;
+
   &.weui-popup-modal-visible {
     opacity: 1;
     transform: translate3d(0,0,0);
